_includes/assets/css/inline.css
/* ... */
footer {
	display: grid;
	grid-template-columns: 1fr 1fr;
	column-gap: 2rem;
	padding: 3rem 0;
	/* max-width: 48rem; */
	max-width: 60rem;
}
@media screen and (max-width: 480px) {
	header {
		padding: 0 1rem;
	}
	footer {
		grid-template-columns: 1fr;
		/* grid-template-rows: auto auto; */
	}
}

footer section h2 {
	margin: 3rem 0 .3em;
}

main {
	padding-bottom: 2em;
}

main :first-child,
main > article :first-child {
	margin-top: 0;
}

/* pre {
	font-size: 14px;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
	-moz-tab-size: 2;
	tab-size: 2;
	-webkit-hyphens: none;
	-moz-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	padding: 1em;
	margin: .5em 0;
} */



/* Header Logo (style as h2)
header > em {
	display: block;
	font-size: 2em;
	margin: .67em 0;
	font-weight: bold;
	font-style: normal;
} */

/* Header Nav */
header nav ul :first-child {
	margin-left: 0;
}

header nav li {
	display: inline-block;
	margin: 0 .5em;
	font-size: 120%;
}

header nav li a[href]:not(:hover) {
	text-decoration: none;
	color:var(--dark-gray);
}

header nav li a{
	text-decoration: none;
	border-bottom: 3px solid var(--light-gray);
}

header nav li a:hover {
	border-bottom: 3px solid var(--cool-blue-1);
	text-decoration:none;
	color:var(--dark-gray);
}

header nav li a[data-current="current item"] {
	font-weight: 700;
	border-bottom: 3px solid var(--cool-blue-1);
}

img.logo {
	width: 260px;
}

.fee-cards-wrapper {
	margin: 0 auto;
	max-width: 48rem;
}
.fee-cards {
	display:grid;
	grid-template-columns: 1fr 1fr 1fr;
}
.fee-card {
	background-color: var(--cool-fill);
	padding: 1rem;
	margin: 0 9px .6rem;
}
@media screen and (max-width: 480px) {
	.fee-cards {
		grid-template-columns: 1fr;
		grid-template-rows: 1fr 1fr 1fr;
	}
  }

#mc_embed_signup {
	max-width: 48rem;
	margin: 0px auto;
}
.mc-field-email {
	display: grid;
	grid-template-columns: 1fr 100px;
}

/*------------------------------------*\
    $CONTACT-FORM
\*------------------------------------*/

input,
textarea,
button, a.button, input.button  {
  padding: 1em;
  margin-bottom: 1em;
	font-size: 1rem;
	font-family: var(--sans-serif), sans-serif;
}

button, a.button, input.button {
	background-color: var(--hot-orange-1);
	color: var(--white);
	cursor: pointer;
	border: 1px solid var(--hot-orange-1);
}
button:hover, a.button:hover, input.button:hover {
	background-color: var(--hot-orange-2);
	border: 1px solid var(--hot-orange-2);
}

input,
textarea {
	border: 1px solid var(--html-gray);
	background-color: transparent;
}

button, button:active, a.button:active {
	background-color:transparent;
	color: var(--hot-orange-2);
	cursor: pointer;
	letter-spacing: 2px;
	text-transform: uppercase;
}
button:hover, a.button:hover {
	background-color: var(--hot-orange-2);
	color: var(--white);
}




/*------------------------------------*\
    $GUIDE
\*------------------------------------*/
.color-chips {
	display:flex;
	flex-flow: row wrap;
	justify-content:flex-start;
	margin: 0 auto;
	max-width: 48rem;
}
.color-chip {
	margin: 0 10px;
}
.color-chip dl {
	margin: 0 0 10px;
}
.color-chip dl dd {
	margin-left: 0px;
	text-transform: uppercase;
}
.color-chip dl dt, 
.color-title {
	font-weight: 600;
}

.color-chip-circle {
	width: 80px;
	height: 80px;
	border-radius: 100%;
}
.color-chip-a {background-color: var(--cool-blue-1);}
.color-title-a {color: var(--cool-blue-1);}
.color-chip-b {background-color: var(--cool-blue-2);}
.color-title-b {color: var(--cool-blue-2);}
.color-chip-c {background-color: var(--cool-blue-3);}
.color-title-c { color: var(--cool-blue-3);}
.color-chip-d {background-color: var(--hot-orange-1);}
.color-title-d { color: var(--hot-orange-1);}
.color-chip-e {background-color: var(--hot-orange-2);}
.color-title-e { color: var(--hot-orange-2);}
.color-chip-f {
	background-color: var(--pure-white);
	border: 1px solid var(--html-gray);
}
.color-title-f { color: inherit;}
.color-chip-g {
	background-color: var(--cool-white);
	border: 1px solid var(--html-gray);
}
.color-title-g { color: inherit;}
.color-chip-gg {
	background-color: var(--cool-fill);
	border: 1px solid var(--html-gray);
}
.color-title-gg { color: inherit;}
.color-chip-h {
	background-color: var(--hot-white);
	border: 1px solid var(--html-gray);
}
.color-title-h { color: inherit;}
.color-chip-i {background-color: var(--light-gray);}
.color-title-i { color: inherit;}
.color-chip-j {background-color: var(--html-gray);}
.color-title-j { color: var(--html-gray);}
.color-chip-k {background-color: var(--dark-gray);}
.color-title-k { color: var(--dark-gray);}

.fill-box {
	width: 100%;
}
.fill-box-gg {
	background-color: var(--cool-fill);
	border: none;
}
.fill-box-gg h1 {
	color: var(--cool-blue-1);
	padding: 1em;
}

.book-session-link {
	display:flex;
	justify-content:space-around;
}
.book-session-link a, .book-session-link a:visited {
	border-bottom: 6px solid var(--hot-orange-1);
	color: var(--dark-gray);
	text-decoration: none;
	font-size:1.6em;
}
.book-session-link a:hover {
	border-bottom: 6px solid var(--hot-orange-2);
	color: var(--dark-gray);
	text-decoration: none;
}

     

/*------------------------------------*\
    $BOOK A SESSION
\*------------------------------------*/
.header h1 .healcode-title-text {
	display:none;
}
/* ... */

